Fixed composer script descriptions

--- a/composer.json
+++ b/composer.json
@@ -118,24 +118,30 @@
         "modified-php-tests": "chmod 777 temp && git diff-index --name-only --diff-filter=ACMR origin/master | grep \"^tests.*\\.php$\" > temp/modified-php-tests.txt || echo tests/src/bootstrap.php > temp/modified-php-tests.txt"
     },
     "scripts-descriptions": {
-        "c": "\u001B[0;33m⭐Run all checks (shortcut)\u001B[0m",
-        "t": "\u001B[0;33m⭐Run tests (shortcut)\u001B[0m",
-        "tc": "\u001B[0;33m⭐Run tests with code coverage (shortcut)\u001B[0m",
-        "da": "\u001B[0;33m⭐Dump autoloader (shortcut)\u001B[0m",
-        "cs": "\u001B[0;33m⭐Run CS check\u001B[0m",
-        "build": "\u001B[0;33m⭐Run build script\u001B[0m",
-        "check": "\u001B[0;33m⭐Run all checks (tests, phpstan, phpcs, phplint, spell-check)\u001B[0m",
-        "check-all": "\u001B[0;33m⭐Run all checks on all supported PHP versions (7.2, 7.3, 7.4, 8.0)\u001B[0m",
-        "test": "\u001B[0;33m⭐Run tests\u001B[0m",
-        "test-all": "\u001B[0;33m⭐Run tests on all supported PHP versions (7.2, 7.3, 7.4, 8.0)\u001B[0m",
-        "test-coverage": "\u001B[0;33m⭐Run tests with code coverage\u001B[0m",
-        "stan": "\u001B[0;33m⭐Run PHPStan check\u001B[0m",
-        "stan-all": "\u001B[0;33m⭐Run PHPStan check on PHP 8.0 and 7.4\u001B[0m",
-        "cs-src": "\u001B[0;33m⭐Run CS check on /src\u001B[0m",
-        "cs-tests": "\u001B[0;33m⭐Run CS check on /tests\u001B[0m",
-        "cs-fix": "\u001B[0;33m⭐Run CS check with auto-fixing on /src and /tests\u001B[0m",
-        "spell": "\u001B[0;33m⭐Run spell-checker\u001B[0m",
-        "lint": "\u001B[0;33m⭐Run PHPLint\u001B[0m",
-        "lint-all": "\u001B[0;33m⭐Run PHPLint on all supported PHP versions (7.2, 7.3, 7.4, 8.0)\u001B[0m"
+        "da": "\u001B[0;33mShortcut for dump-autoloader\u001B[0m",
+        "c": "\u001B[0;33mShortcut for check:fast\u001B[0m",
+        "ca": "\u001B[0;33mShortcut for check:all\u001B[0m",
+        "cs": "\u001B[0;33mShortcut for phpcs:all\u001B[0m",
+        "csf": "\u001B[0;33mShortcut for phpcs:fix\u001B[0m",
+        "t": "\u001B[0;33mShortcut for tests:run\u001B[0m",
+        "tc": "\u001B[0;33mShortcut for tests:coverage\u001B[0m",
+
+        "build:run": "Run build script",
+        "check:fast": "Run all checks (tests, phpstan, phpcs, phplint, spell-check)",
+        "check:all": "Run all checks on all supported PHP versions (7.2, 7.3, 7.4, 8.0)",
+        "tests:run": "Run tests",
+        "tests:all": "Run tests on all supported PHP versions (7.2, 7.3, 7.4, 8.0)",
+        "tests:coverage": "Run tests with code coverage",
+        "phpstan:run": "Run PHPStan check",
+        "phpstan:all": "Run PHPStan check on PHP 8.0 and 7.4",
+        "phpcs:all": "Run CS check on all code",
+        "phpcs:src": "Run CS check on /src",
+        "phpcs:src-fast": "Run fast CS check on /src",
+        "phpcs:tests": "Run CS check on /tests",
+        "phpcs:tests-fast": "Run fast CS check on /tests",
+        "phpcs:fix": "Run CS check with auto-fixing on /src and /tests",
+        "spell:check": "Run spell-checker",
+        "lint:php": "Run PHPLint",
+        "lint:php-all": "Run PHPLint on all supported PHP versions (7.2, 7.3, 7.4, 8.0)"
     }
 }
