--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "php": "^7.1|^8.0",
         "ext-calendar":"*",
         "nette/http": "~2.4|~3.0",
-        "nette/utils": "~2.4|~3.0",
-        "tracy/tracy": "~2.4"
+        "nette/utils": "~2.4|~3.0"
     },
     "require-dev": {
         "dogma/dogma-dev": "0.1.20"
