--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "tracy/tracy": "~2.4"
     },
     "require-dev": {
-        "dogma/dogma-dev": "0.1.20"
+        "dogma/dogma-dev": "0.1.21"
     },
     "suggest": {
         "ext-dom": "for Dom (basic functionality)",
@@ -73,6 +73,7 @@
 
         "tests:run": "php vendor/nette/tester/src/tester tests -c tests --colors 1",
         "tests:all": [
+            "php81 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php80 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php74 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php73 vendor/nette/tester/src/tester tests -c tests --colors 1",
@@ -81,10 +82,14 @@
         ],
         "tests:coverage": "php vendor/nette/tester/src/tester tests -c tests --colors 1 -p phpdbg --coverage tests/coverage.html --coverage-src src",
 
-        "phpstan:run": "php vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan/phpstan.neon -l 7 src tests",
+        "phpstan:run": "php vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan.neon",
         "phpstan:all": [
-            "php80 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan/phpstan.neon -l 7 src tests",
-            "php74 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan/phpstan.neon -l 7 src tests"
+            "php81 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan.neon",
+            "php80 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan.neon",
+            "php74 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan.neon",
+            "php73 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan.neon",
+            "php72 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan.neon",
+            "php71 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan.neon"
         ],
 
         "phpcs:all": [
@@ -103,10 +108,11 @@
         ],
         "phpcs:fix": "php vendor/squizlabs/php_codesniffer/bin/phpcbf --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset-tests.xml -sp src tests",
 
-        "spell:check": "php vendor/spell-checker/spell-checker/spell-checker -c build/spell-checker/spell-checker.neon --checkDictionaryFiles --memoryLimit 1024M --noLogo",
+        "spell:check": "php vendor/spell-checker/spell-checker/spell-checker -c build/spell-checker.neon --checkDictionaryFiles --memoryLimit 1024M --noLogo",
 
         "lint:php": "php vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
         "lint:php-all": [
+            "php81 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php80 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php74 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php73 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
