Updated PHPStan; min PHP version is 7.4

--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.4|^8.0",
         "ext-calendar":"*",
         "nette/http": "~2.4|~3.0",
         "nette/utils": "~2.4|~3.0|~4.0"
     },
     "require-dev": {
         "dogma/dogma-dev": "0.1.29",
-        "phpstan/phpstan": "1.8.2"
+        "phpstan/phpstan": "1.10.2"
     },
     "suggest": {
         "ext-dom": "for Dom (basic functionality)",
@@ -76,9 +76,7 @@
             "php82 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php81 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php80 vendor/nette/tester/src/tester tests -c tests --colors 1",
-            "php74 vendor/nette/tester/src/tester tests -c tests --colors 1",
-            "php73 vendor/nette/tester/src/tester tests -c tests --colors 1",
-            "php72 vendor/nette/tester/src/tester tests -c tests --colors 1"
+            "php74 vendor/nette/tester/src/tester tests -c tests --colors 1"
         ],
         "tests:coverage": "php vendor/nette/tester/src/tester tests -c tests --colors 1 -p phpdbg --coverage tests/coverage.html --coverage-src src",
 
@@ -87,9 +85,7 @@
             "php82 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/PHPStan/phpstan.neon",
             "php81 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/PHPStan/phpstan.neon",
             "php80 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/PHPStan/phpstan.neon",
-            "php74 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/PHPStan/phpstan.neon",
-            "php73 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/PHPStan/phpstan.neon",
-            "php72 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/PHPStan/phpstan.neon"
+            "php74 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/PHPStan/phpstan.neon"
         ],
 
         "lint:php": "php vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
@@ -97,9 +93,7 @@
             "php82 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php81 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php80 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
-            "php74 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
-            "php73 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
-            "php72 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests"
+            "php74 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests"
         ],
 
         "phpcs:all": [
@@ -156,7 +150,7 @@
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": false,
-            "sllh/composer-versions-check": true
+            "sllh/composer-versions-check": false
         }
     }
 }
