--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "require-dev": {
         "dogma/dogma-dev": "0.1.29",
-        "phpstan/phpstan": "1.10.2"
+        "phpstan/phpstan": "1.10.2",
+        "phpstan/phpstan-strict-rules": "^1.0"
     },
     "suggest": {
         "ext-dom": "for Dom (basic functionality)",
